# fretes-rodonaves

./: .env.production  .gitignore  LOGS_DETALHADOS_RESUMO.md  MIGRATION_GUIDE.md  Procfile  RAILWAY_DEPLOY.md  README.md  Relação Cidades Atendidas Modal Rodoviário_25_03_25.xlsx  TDAs e TRTs 2025 11_04_25 - NXT.xlsx  distance_verification_final_report.txt  especificacoes_produtos (1).md  examine_excel.py  fix_autocomplete.py  force_fix_railway.py  force_import_all_cities.py  import_cidades.py  import_cities_data.py  import_cities_fixed.py  import_delivery_times.py  import_taxas.py  import_test_data.py  initialize_database.py  initialize_db_production.py  pdf_tariff_parser.py  populate_essential_data.py  pyproject.toml  railway.toml  requirements.txt  reset_database.py  seed_cidades_exemplo.py  start.sh  state_config.py  test_extended.html  update_city_categories.py  update_produtos.py  update_tariff_data.py  vercel.json  verify_cities.py  verify_direct.py  verify_distances.py  (+3 more)
api/: index.py  main.py
frete_app/: calc.py  calc_extended.py  db.py  fasthtml.py  main.py  models.py  models_extended.py  parsers.py  seed_data.py  views.py  views_extended.py  views_extended_FIXED.py
frete_app/static/: style.css  styles.css
