[tool.poetry]
name = "frete-rodonaves-app"
version = "0.1.0"
description = "Calculadora de fretes Rodonaves com FastAPI e HTMX"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "frete_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlmodel = "^0.0.21"
jinja2 = "^3.1"
pdfplumber = "^0.11"
camelot-py = "^0.11"
python-multipart = "^0.0.9"
pydantic = "^2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"